# thornmarked

./: BUILD.bazel  README.md  go.mod  run.py  test.sh
assets/: BUILD.bazel  defs.bzl  manifest.txt
assets/fonts/: BUILD.bazel  charset.txt  charset_big.txt
assets/fonts/baksosapi/: BUILD.bazel
assets/fonts/fira_sans/: BUILD.bazel
assets/fonts/grenze_gotisch/: BUILD.bazel
assets/fonts/terminus/: BUILD.bazel
assets/images/: BUILD.bazel  Buttons.idraw  defs.bzl
assets/models/: BUILD.bazel  BlueEnemy.fbx  GreenEnemy.fbx  defs.bzl  fairy.blend  fairy.fbx  fairy2.blend  fairy2.fbx  logo.blend  logo.fbx  spike.blend  spike.fbx  spike2.blend
assets/music/: 02_Underground_Tension.flac  02_Underground_Tension.json  03_Progression.flac  04_Under_the_Moon.flac  05_Descent_Into_Madness.flac  07_The_Taste_of_Nectar.flac  08_Rising_Tide_Redux.json  09_Sunlight_and_Fog.json  BUILD.bazel  defs.bzl
assets/particle/: BUILD.bazel
assets/sfx/: BUILD.bazel  fanfare.flac  haa_1.flac  haa_2.flac  haa_3.flac  haa_4.flac  haa_5.flac  haa_6.flac  mdie_1.aif  mdie_2.aif  mdie_3.aif  mdie_4.aif  mdie_5.aif  mdie_6.aif  mdie_7.aif  wap_1.flac  wap_2.flac  wap_3.flac  wap_4.flac  wap_5.flac  wha_1.flac  wha_2.flac  wha_3.flac  wha_4.flac  wha_5.flac
assets/test/: BUILD.bazel
base/: base.h  console.c  console.h  console_global.c  console_internal.h  console_n64.c  console_n64.h  console_test.c  defs.h  fatal.c  fatal_n64.c  fatal_pc.c  fixup.c  fixup.h  float.c  float.h  hash.c  hash.h  ivec3.c  ivec3.h  mat4.c  mat4.h  mat4_n64.c  memcmp.c  memcpy.c  memmove.c  memory.c  memory.h  memory_n64.c  memory_pc.c  memset.c  os.h  pack32.c  quat.c  quat.h  random.c  random.h  scheduler.c  scheduler.h  strlen.c  (+11 more)
base/bazel/: tools.BUILD.tpl  tools.bzl
base/console/: BUILD.bazel  console.c  console_test.c  global.c  n64.c
base/n64/: BUILD.bazel  console.c  fatal.c  fault.c  fault.h  mat4.c  mat4.h  memory.c  os.c  os.h  scheduler.c  scheduler.h  stack_boot.s  stack_fault.s  stack_idle.s  start.s  system.h  thread.c
base/pak/: BUILD.bazel  pak.c  pak.h  types.h
base/testlib/: BUILD.bazel  example_ok.c  quote.c  stack.s  testlib.c  testlib.h
experimental/audio/: BUILD.bazel  audio.c  defs.h  main.c  manifest.txt
experimental/controller/: BUILD.bazel  main.c
experimental/simple/: BUILD.bazel  simple.c  simple.h  stack.s
experimental/tvtype/: BUILD.bazel  main.c
game/: .gitignore  BUILD.bazel  Makefile  camera.c  camera.h  console.c  console.h  corelib.h  defs.h  fatal.c  game.c  game.h  graphics.c  graphics.h  input.h  link.lds  main.c  memset.c  model.c  model.h  physics.c  physics.h  run.py  scheduler.c  scheduler.h  spec  stack.s  start.s  text.c  texture_n64.c  texture_n64.h  texture_n64_dl.c  walk.c  walk.h
game/core/: BUILD.bazel  camera.c  camera.h  entity.c  entity.h  game.c  game.h  input.h  material.h  menu.c  menu.h  model.c  model.h  monster.c  monster.h  particle.c  particle.h  physics.c  physics.h  player.c  player.h  random.c  random.h  sfx.c  sfx.h  spawn.c  spawn.h  stage.c  stage.h  time.c  time.h  walk.c  walk.h
game/n64/: BUILD.bazel  audio.c  audio.h  camera.c  camera.h  defs.h  game.c  game.h  graphics.c  graphics.h  image.c  image.h  input.c  input.h  main.c  material.c  material.h  model.c  model.h  palette.c  palette.h  palette_gen.c  particle.c  particle.h  stack.s  system.c  system.h  task.c  task.h  terrain.c  terrain.h  text.c  text.h  texture.c  texture.h  texture_dl.c  texture_dl.h  time.c  time.h
n64/: BUILD.bazel  cc_toolchain_config.bzl  defs.bzl  link.lds  n64sdk.bazel  repo.bzl  start.s
scripts/: color.py  encode.py  srgb.py  texsize.py
sdk/: .gitignore  BUILD.bazel  README.md
tools/addmodel/: BUILD.bazel  addmodel.go
tools/artifact/: BUILD.bazel  README.md  artifact.go
tools/audio/tabledesign/: README.md
