load("@bazel_gazelle//:def.bzl", "gazelle")

filegroup(
    name = "rom_images",
    srcs = [
        "//experimental/audio",
        "//experimental/tvtype:tvtype_ntsc",
        "//experimental/tvtype:tvtype_pal",
        "//game/n64",
    ],
)

test_suite(
    name = "tests",
    tests = [
        "//base:console_test",
    ],
)

gazelle(name = "gazelle")
