load(":defs.bzl", "asset_data", "asset_header")

asset_header(
    name = "assets",
    manifest = "manifest.txt",
    visibility = ["//game:__subpackages__"],
)

asset_data(
    name = "assets_files",
    srcs = [
        "//assets/fonts/grenze_gotisch",
        "//assets/images",
        "//assets/images:big_images",
        "//assets/models:enemy",
        "//assets/models:fairy2",
        "//assets/models:logo",
        "//assets/models:textures",
        "//assets/music",
    ],
    manifest = "manifest.txt",
    visibility = ["//game:__subpackages__"],
)
