load(":defs.bzl", "asset_data", "asset_header")

asset_header(
    name = "assets",
    manifest = "manifest.txt",
    visibility = ["//game:__subpackages__"],
)

asset_data(
    name = "assets_files",
    srcs = [
        "//assets/fonts/baksosapi",
        "//assets/fonts/fira_sans",
        "//assets/images",
        "//assets/images:big_images",
        "//assets/images:buttons",
        "//assets/images:point",
        "//assets/models:enemy",
        "//assets/models:fairy2",
        "//assets/models:logo",
        "//assets/models:textures",
        "//assets/music",
        "//assets/particle",
        "//assets/sfx",
    ],
    manifest = "manifest.txt",
    visibility = ["//game:__subpackages__"],
)
