load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//base:copts.bzl", "COPTS")
load("//n64:defs.bzl", "n64_rom")

alias(
    name = "game",
    actual = ":Thornmarked",
    visibility = ["//:__pkg__"],
)

cc_binary(
    name = "Thornmarked.elf",
    srcs = [
        "defs.h",
        "game.c",
        "game.h",
        "graphics.h",
        "main.c",
        "physics.c",
        "physics.h",
        "stack.s",
        "text.c",
        "walk.c",
        "walk.h",
    ],
    copts = COPTS,
    deps = [
        "//assets",
        "//base",
        "//base:random",
        "//base:scheduler",
        "//base/pak",
        "//n64:libultra",
        "//sdk:gspF3DEX2.xbus",
        "//sdk:rspboot",
    ],
)

n64_rom(
    name = "Thornmarked",
    data = "//assets:assets_files",
    program = ":Thornmarked.elf",
    title = "Thornmarked",
)
