load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//base:copts.bzl", "COPTS")
load("//n64:defs.bzl", "n64_rom")

filegroup(
    name = "game",
    srcs = [
        ":Thornmarked_NTSC",
        ":Thornmarked_PAL",
    ],
    visibility = ["//:__pkg__"],
)

cc_binary(
    name = "Thornmarked.elf",
    srcs = [
        "camera.c",
        "camera.h",
        "defs.h",
        "game.c",
        "game.h",
        "graphics.c",
        "graphics.h",
        "main.c",
        "model.c",
        "model.h",
        "n64/model.c",
        "n64/model.h",
        "n64/texture.c",
        "n64/texture.h",
        "n64/texture_dl.c",
        "n64/texture_dl.h",
        "physics.c",
        "physics.h",
        "stack.s",
        "text.c",
        "walk.c",
        "walk.h",
    ],
    copts = COPTS,
    deps = [
        "//assets",
        "//base",
        "//base:random",
        "//base/n64:scheduler",
        "//base/pak",
        "//sdk:gspF3DEX2.xbus",
        "//sdk:rspboot",
    ],
)

n64_rom(
    name = "Thornmarked_NTSC",
    data = "//assets:assets_files",
    program = ":Thornmarked.elf",
    region = "E",
    title = "Thornmarked (NTSC)",
)

n64_rom(
    name = "Thornmarked_PAL",
    data = "//assets:assets_files",
    program = ":Thornmarked.elf",
    region = "P",
    title = "Thornmarked (PAL)",
)
