load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")

cc_import(
    name = "libultra_bin",
    static_library = "lib/libgultra.a",
)

cc_library(
    name = "libultra",
    hdrs = ["include/ultra64.h"] + glob(["include/PR/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [":libultra_bin"],
    defines = ["_LANGUAGE_C"],
)

OBJS = [
    "aspMain.o",
    "gspF3DEX.NoN.fifo.o",
    "gspF3DEX.fifo.o",
    "gspF3DEX2.NoN.fifo.o",
    "gspF3DEX2.NoN.xbus.o",
    "gspF3DEX2.Rej.fifo.o",
    "gspF3DEX2.Rej.xbus.o",
    "gspF3DEX2.fifo.o",
    "gspF3DEX2.xbus.o",
    "gspF3DEX2d.NoN.fifo.o",
    "gspF3DEX2d.NoN.xbus.o",
    "gspF3DEX2d.Rej.fifo.o",
    "gspF3DEX2d.Rej.xbus.o",
    "gspF3DEX2d.fifo.o",
    "gspF3DEX2d.xbus.o",
    "gspF3DLP.Rej.fifo.o",
    "gspF3DLX.NoN.fifo.o",
    "gspF3DLX.Rej.fifo.o",
    "gspF3DLX.fifo.o",
    "gspF3DLX2.Rej.fifo.o",
    "gspF3DLX2.Rej.xbus.o",
    "gspF3DLX2d.Rej.fifo.o",
    "gspF3DLX2d.Rej.xbus.o",
    "gspF3DNoN.dram.o",
    "gspF3DNoN.fifo.o",
    "gspF3DNoN.o",
    "gspFast3D.dram.o",
    "gspFast3D.fifo.o",
    "gspFast3D.o",
    "gspL3DEX.fifo.o",
    "gspL3DEX2.fifo.o",
    "gspL3DEX2.xbus.o",
    "gspL3DEX2d.fifo.o",
    "gspL3DEX2d.xbus.o",
    "gspLine3D.dram.o",
    "gspLine3D.fifo.o",
    "gspLine3D.o",
    "gspS2DEX.fifo.o",
    "gspS2DEX2.fifo.o",
    "gspS2DEX2.xbus.o",
    "gspS2DEX2d.fifo.o",
    "gspS2DEX2d.xbus.o",
    "gspS2DEX.fifo_d.o",
    "gspSprite2D.dram.o",
    "gspSprite2D.fifo.o",
    "gspSprite2D.o",
    "gspTurbo3D.dram.o",
    "gspTurbo3D.fifo.o",
    "gspTurbo3D.o",
    "rspboot.o",
]

[cc_library(
    name = name[:len(name)-2],
    srcs = ["lib/PR/" + name],
    # static_library = "lib/PR/" + name,
    visibility = ["//visibility:public"],
) for name in OBJS]
