load(":defs.bzl", "textures")

package(default_visibility = ["//assets:__pkg__"])

textures(
    name = "images",
    srcs = [
        "Ariella.png",
        "Ground023.png",
        "Marble012.png",
    ],
    format = "rgba.16",
    mipmap = True,
    native = True,
)

textures(
    name = "big_images",
    srcs = [
        "Logo.png",
    ],
    anchor = "0.5:0",
    format = "rgba.16",
    strips = True,
)
