load(":defs.bzl", "textures")
load("//tools/font:defs.bzl", "sprite_font")

package(default_visibility = ["//assets:__pkg__"])

textures(
    name = "images",
    srcs = [
        "Ariella.png",
        "Ground023.png",
        "Marble012.png",
    ],
    format = "rgba.16",
    mipmap = True,
    native = True,
)

textures(
    name = "big_images",
    srcs = [
        "Logo.png",
    ],
    anchor = "0.5:1",
    format = "rgba.16",
    strips = True,
)

textures(
    name = "point",
    srcs = [
        "Point.png",
    ],
    anchor = "0.5:0.5",
    format = "rgba.16",
    strips = True,
)

sprite_font(
    name = "buttons",
    src = "Buttons_Small.png",
    format = "ia.8",
    sprite_grid = 4,
    sprite_y = 8,
    texsize = "64:64",
    visibility = ["//assets:__pkg__"],
)
