load(":defs.bzl", "models")

package(default_visibility = ["//assets:__pkg__"])

models(
    name = "logo",
    srcs = ["logo.fbx"],
    primitive_color = True,
    scale = "100",
)

models(
    name = "fairy",
    srcs = ["fairy.fbx"],
    normals = True,
    scale = "meter*2/11",  # Model is ~11 units tall.
)

models(
    name = "spike",
    srcs = ["spike.fbx"],
    normals = True,
)
