load(":defs.bzl", "models")
load("//assets/images:defs.bzl", "textures")

package(default_visibility = ["//assets:__pkg__"])

models(
    name = "logo",
    srcs = ["logo.fbx"],
    primitive_color = True,
    scale = "100",
)

models(
    name = "fairy",
    srcs = ["fairy.fbx"],
    normals = True,
    scale = "meter*2/11",  # Model is ~11 units tall.
)

models(
    name = "spike",
    srcs = ["spike.fbx"],
    normals = True,
)

models(
    name = "fairy2",
    srcs = ["fairy2.fbx"],
    axes = "-y,x,z",
    scale = "meter*2/5",
    texcoords = True,
)

textures(
    name = "textures",
    srcs = [
        "fairy.png",
    ],
    format = "rgba.16",
    mipmap = True,
    native = True,
)
