load(":defs.bzl", "audio_tracks")

audio_tracks(
    name = "music",
    srcs = [
        "01_Surrender_of_Innocence.flac",
        "02_Underground_Tension.flac",
        "03_Progression.flac",
        "04_Under_the_Moon.flac",
        "05_Descent_Into_Madness.flac",
    ],
    rate = "32000",
    visibility = ["//visibility:public"],
)

# [genrule(
#     name = name + "_dec",
#     srcs = [name + "_adpcm.aifc"],
#     outs = [name + "_dec.wav"],
#     cmd = ("$(execpath //tools/audio/encode:vadpcm_dec) $< >$(RULEDIR)/temp.pcm; " +
#            "$(execpath @tools//:sox) --type raw --bits 16 --rate %d --encoding signed -B $(RULEDIR)/temp.pcm $@" % RATE),
#     tools = [
#         "//tools/audio/encode:vadpcm_dec",
#         "@tools//:sox",
#     ],
# ) for name in NAMES]
