load(":defs.bzl", "audio_tracks")

audio_tracks(
    name = "music",
    srcs = [
        "01_Surrender_of_Innocence.flac",
        "02_Underground_Tension.flac",
        "03_Progression.flac",
        "04_Under_the_Moon.flac",
        "05_Descent_Into_Madness.flac",
        "08_Rising_Tide_Redux.flac",
        "08_Rising_Tide_Redux.json",
    ],
    rate = "32000",
    visibility = ["//visibility:public"],
)
