package(default_visibility = ["//assets:__pkg__"])

load("@rules_cc//cc:defs.bzl", "cc_library")

[genrule(
    name = name,
    srcs = [name + ".png"],
    outs = [name + ".dat"],
    cmd = "$(location //tools/texture) -output=$@ $<",
    tools = ["//tools/texture"],
) for name in ["Ariella_32x32", "Ball"]]
