load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//base:copts.bzl", "COPTS")

cc_library(
    name = "console",
    srcs = [
        "console.c",
        "global.c",
        "internal.h",
    ]+ select({
        "//n64:os": ["n64.c"],
        "//conditions:default": [],
    }),
    hdrs = [
        "console.h",
    ] + select({
        "//n64:os": ["n64.h"],
        "//conditions:default": [],
    }),
    copts = COPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//assets/fonts/terminus:ter-u12n",
        "//base",
    ] + select({
        "//n64:os": ["//n64:libultra"],
        "//conditions:default": [],
    }),
)

cc_test(
    name = "console_test",
    size = "small",
    srcs = [
        "console_test.c",
        "internal.h",
    ],
    copts = COPTS,
    deps = [
        ":console",
        "//base/testlib",
    ],
)
