load("@rules_cc//cc:defs.bzl", "cc_library")
load("//base:copts.bzl", "COPTS")

cc_library(
    name = "pak",
    srcs = [
        "pak.c",
    ],
    hdrs = [
        "pak.h",
        "types.h",
    ],
    copts = COPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//base:base_n64",
    ],
)
