load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//base:copts.bzl", "COPTS")
load("//n64:defs.bzl", "n64_rom")

genrule(
    name = "assets_files",
    srcs = [
        "manifest.txt",
        "//assets/music:01_Surrender_of_Innocence_adpcm",
        "//assets/music:02_Underground_Tension_adpcm",
        "//assets/music:03_Progression_adpcm",
        "//assets/music:04_Under_the_Moon_adpcm",
        "//assets/music:05_Descent_Into_Madness_adpcm",
        "//assets/sfx:fanfare",
    ],
    outs = [
        "assets.dat",
        "assets.h",
    ],
    cmd = ("$(execpath //tools/makepak) " +
           "-dir $(GENDIR)/assets " +
           "$(execpath manifest.txt)  " +
           "$(execpath assets.dat) $(execpath assets.h)"),
    tools = ["//tools/makepak"],
)

cc_binary(
    name = "audio.elf",
    srcs = [
        "assets.h",
        "audio.c",
        "defs.h",
        "main.c",
        "stack.s",
    ],
    copts = COPTS,
    deps = [
        "//base",
        "//base:scheduler",
        "//base/pak",
        "//n64:libultra",
        "//sdk:aspMain",
        "//sdk:gspF3DEX2.xbus",
        "//sdk:rspboot",
    ],
)

n64_rom(
    name = "audio",
    data = ":assets.dat",
    program = ":audio.elf",
    visibility = ["//:__pkg__"],
)
