load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//assets:defs.bzl", "asset_data", "asset_header")
load("//base:copts.bzl", "COPTS")
load("//n64:defs.bzl", "n64_rom")

asset_header(
    name = "assets",
    header = "assets.h",
    manifest = "manifest.txt",
)

asset_data(
    name = "assets_files",
    srcs = [
        "//assets/music",
        "//assets/sfx:fanfare",
    ],
    dirs = [
        "../../assets",
    ],
    manifest = "manifest.txt",
)

cc_binary(
    name = "audio.elf",
    srcs = [
        "audio.c",
        "defs.h",
        "main.c",
        "stack.s",
    ],
    copts = COPTS,
    deps = [
        ":assets",
        "//base",
        "//base:scheduler",
        "//base/pak",
        "//n64:libultra",
        "//sdk:aspMain",
        "//sdk:gspF3DEX2.xbus",
        "//sdk:rspboot",
    ],
)

n64_rom(
    name = "audio",
    data = ":assets_files",
    program = ":audio.elf",
    visibility = ["//:__pkg__"],
)
