load("@rules_cc//cc:defs.bzl", "cc_library")
load("//base:copts.bzl", "COPTS")

cc_library(
    name = "core",
    srcs = [
        "camera.c",
        "game.c",
        "model.c",
        "monster.c",
        "physics.c",
        "player.c",
        "random.c",
        "walk.c",
    ],
    hdrs = [
        "camera.h",
        "entity.h",
        "game.h",
        "input.h",
        "model.h",
        "monster.h",
        "physics.h",
        "player.h",
        "random.h",
        "time.h",
        "walk.h",
    ],
    copts = COPTS,
    visibility = ["//game:__subpackages__"],
    deps = [
        "//assets",
        "//base",
        "//base:random",
    ],
)
