load("@rules_cc//cc:defs.bzl", "cc_library")
load("//base:copts.bzl", "COPTS")

cc_library(
    name = "core",
    srcs = [
        "camera.c",
        "entity.c",
        "game.c",
        "menu.c",
        "model.c",
        "monster.c",
        "particle.c",
        "physics.c",
        "player.c",
        "random.c",
        "sfx.c",
        "stage.c",
        "time.c",
        "walk.c",
    ],
    hdrs = [
        "camera.h",
        "entity.h",
        "game.h",
        "input.h",
        "material.h",
        "menu.h",
        "model.h",
        "monster.h",
        "particle.h",
        "physics.h",
        "player.h",
        "random.h",
        "sfx.h",
        "stage.h",
        "time.h",
        "walk.h",
    ],
    copts = COPTS,
    visibility = ["//game:__subpackages__"],
    deps = [
        "//assets",
        "//base",
        "//base:random",
    ],
)
