load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//base:copts.bzl", "COPTS")
load("//n64:defs.bzl", "n64_rom")

filegroup(
    name = "n64",
    srcs = [
        ":Thornmarked_NTSC",
        ":Thornmarked_PAL",
    ],
    visibility = ["//:__pkg__"],
)

cc_binary(
    name = "Thornmarked.elf",
    srcs = [
        "audio.c",
        "audio.h",
        "camera.c",
        "camera.h",
        "defs.h",
        "graphics.c",
        "graphics.h",
        "image.c",
        "image.h",
        "input.c",
        "input.h",
        "main.c",
        "material.c",
        "material.h",
        "model.c",
        "model.h",
        "stack.s",
        "system.c",
        "system.h",
        "task.c",
        "task.h",
        "text.c",
        "text.h",
        "texture_dl.c",
        "texture_dl.h",
        "time.c",
        "time.h",
    ],
    copts = COPTS,
    deps = [
        "//assets",
        "//base",
        "//base:random",
        "//base/n64:scheduler",
        "//base/pak:n64",
        "//game/core",
        "//sdk:aspMain",
        "//sdk:gspF3DEX2.xbus",
        "//sdk:rspboot",
    ],
)

n64_rom(
    name = "Thornmarked_NTSC",
    data = "//assets:assets_files",
    program = ":Thornmarked.elf",
    region = "E",
    title = "Thornmarked (NTSC)",
)

n64_rom(
    name = "Thornmarked_PAL",
    data = "//assets:assets_files",
    program = ":Thornmarked.elf",
    region = "P",
    title = "Thornmarked (PAL)",
)
