load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//base:copts.bzl", "COPTS")
load("//n64:defs.bzl", "n64_rom")

cc_binary(
    name = "palette_gen",
    srcs = ["palette_gen.c"],
    copts = COPTS,
    deps = [
        "//base:tool",
    ],
)

genrule(
    name = "palette_data",
    outs = ["palette_data.h"],
    cmd = "$(execpath :palette_gen) $@",
    tools = [":palette_gen"],
)

filegroup(
    name = "n64",
    srcs = [
        ":Thornmarked_NTSC",
        ":Thornmarked_PAL",
    ],
    visibility = ["//:__pkg__"],
)

cc_binary(
    name = "Thornmarked.elf",
    srcs = [
        "audio.c",
        "audio.h",
        "camera.c",
        "camera.h",
        "defs.h",
        "graphics.c",
        "graphics.h",
        "image.c",
        "image.h",
        "input.c",
        "input.h",
        "main.c",
        "material.c",
        "material.h",
        "model.c",
        "model.h",
        "palette.c",
        "palette.h",
        "particle.c",
        "particle.h",
        "stack.s",
        "system.c",
        "system.h",
        "task.c",
        "task.h",
        "text.c",
        "text.h",
        "texture.c",
        "texture.h",
        "time.c",
        "time.h",
        ":palette_data",
    ],
    copts = COPTS,
    deps = [
        "//assets",
        "//base",
        "//base:random",
        "//base/n64:scheduler",
        "//base/pak:n64",
        "//game/core",
        "//game/n64/texture_dl",
        "//sdk:aspMain",
        "//sdk:gspF3DEX2.xbus",
        "//sdk:rspboot",
    ],
)

n64_rom(
    name = "Thornmarked_NTSC",
    data = "//assets:assets_files",
    program = ":Thornmarked.elf",
    region = "E",
    title = "Thornmarked (NTSC)",
)

n64_rom(
    name = "Thornmarked_PAL",
    data = "//assets:assets_files",
    program = ":Thornmarked.elf",
    region = "P",
    title = "Thornmarked (PAL)",
)
