load("//tools/font:defs.bzl", "bitmap_font")

bitmap_font(
    name = "grenze_gotisch",
    src = "GrenzeGotisch-Medium.ttf",
    charset = "//assets/fonts:charset.txt",
    encoding = "windows-1252",
    font_size = "32",
    format = "ia.8",
    shadow = "2:2",
    texsize = "64:64",
    visibility = ["//assets:__pkg__"],
)
